<resources>
    <string name="app_name">傻瓜快递</string>
    <string name="query">查询</string>
    <string name="user_center">用户中心</string>
    <string name="nearby">附近</string>
    <string name="sent">寄件</string>
    <string name="notice_center">消息中心</string>
    <string name="delivery_parity">快递比价</string>
    <string name="scan_text">将摄像头对准条形码,即可自动扫描</string>
    <string name="title_query">查快递</string>
    <string name="title_nearby">附近</string>
    <string name="title_navigation">导航</string>
    <string name="title_scan">扫一扫</string>
    <string name="title_delivery_company_select">快递公司选择</string>
    <string name="title_parity">比价</string>
    <string name="title_delivery_query_result">查询结果</string>
    <string name="title_delivery_query_failed">查询失败</string>
    <string name="title_sender">我要寄件</string>
    <string name="title_send_modify">寄件修改</string>
    <string name="title_user_center">用户中心</string>
    <string name="title_my_orders">我的订单</string>
    <string name="title_user_login">用户登录</string>
    <string name="title_binded_mobile_number_modify">更改绑定手机号</string>
    <string name="title_psw_forget">密码找回</string>
    <string name="title_psw_modify">密码修改</string>
    <string name="title_user_register">用户注册</string>
    <string name="title_message_center">消息中心</string>
    <string name="title_feedback">投诉建议</string>
    <string name="title_query_history">查询历史</string>
    <string name="title_address_manager">地址管理</string>
    <string name="title_address_sender_manager">寄件人地址管理</string>
    <string name="title_address_recipient_manager">收件人地址管理</string>
    <string name="title_address_add">地址添加</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_send_success">提交成功</string>
    <string name="title_province">省</string>
    <string name="title_city">城市</string>
    <string name="title_district">县/区</string>
    <string name="title_address_modify">地址修改</string>
    <string name="title_address_selector">地址选择</string>
    <string name="dialog_location_get_prompt_title">地理位置授权</string>
    <string name="dialog_location_get_prompt_content">允许本应用访问您当前的地理位置信息？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="location_get_failed">当前位置获取失败.</string>
    <string name="recipient_info">收件人信息</string>
    <string name="delivery_info">快件信息</string>
    <string name="sender_info">寄件人信息</string>
    <string name="sender_info_price_compare">选择快递公司</string>
    <string name="select_from_address_book">从地址簿选取</string>
    <string name="select_date_time">选择日期/时间</string>
    <string name="select_pcd">选择省/市/区</string>
    <string name="sender_name">寄件人:</string>
    <string name="recipient_name">收件人:</string>
    <string name="addreess_detail">详细地址:</string>
    <string name="sender_addreess_province_city_district">寄件地址:</string>
    <string name="recipient_addreess_province_city_district">收件地址:</string>
    <string name="sender_phone">手机/固话:</string>
    <string name="sender_detail_address">详细地址:</string>
    <string name="sender_area">寄件地址:</string>
    <string name="please_enter_area">请填写寄件地址:</string>
    <string name="weight">重量(kg):</string>
    <string name="type">类型:</string>
    <string name="remark">备注:</string>
    <string name="name">物品名称:</string>
    <string name="deliver_company_select">直接选择快递公司:</string>
    <string name="go_to_parity">去比价</string>
    <string name="time_reserve_pickup">预约取件</string>
    <string name="order_submmit">订单提交</string>
    <string name="address_manage">常用地址</string>
    <string name="address_recipient">收件人地址簿</string>
    <string name="address_sender">发件人地址簿</string>
    <string name="address_sender_add">添加寄件地址</string>
    <string name="address_recipient_add">添加收件地址</string>
    <string name="interactive_activity">互动活动</string>
    <string name="my_orders">我的订单</string>
    <string name="my_collects">我的收藏</string>
    <string name="details">详情</string>
    <string name="suggestions">投诉建议</string>
    <string name="i_want_say">我想说两句</string>
    <string name="system_settings">系统设置</string>
    <string name="settings">设置</string>
    <string name="login">登录</string>
    <string name="status_no_login">您尚未登录</string>
    <string name="hint_login_username">请输入登录账号</string>
    <string name="hint_login_psw">请输入登录密码</string>
    <string name="hint_login_check_code">请输入验证码</string>
    <string name="hint_register_username">请输入用户名/邮箱/手机号码</string>
    <string name="hint_register_nickname">请输入昵称</string>
    <string name="hint_register_psw">请输入密码</string>
    <string name="hint_register_psw_repeat">请再次输入密码</string>
    <string name="hint_register_mobile_number">请输入绑定的手机号</string>
    <string name="hint_register_email">请再次输入密码</string>
    <string name="hint_register_captcha">请输入验证码</string>
    <string name="hint_input_old_psw">请输入旧的密码</string>
    <string name="hint_input_new_psw">6~30个字符</string>
    <string name="hint_input_new_psw_repeat">请再次输入密码</string>
    <string name="hint_input_address">请输入详细地址</string>
    <string name="hint_suggestions_input">请输入您的宝贵建议:</string>
    <string name="hint_input_old_mobile_number">请输入之前绑定的手机号码</string>
    <string name="hint_input_registered_mobile_number">请输入注册绑定的手机号码</string>
    <string name="hint_input_new_mobile_number">请输入之您的手机号码</string>
    <string name="hint_set_new_psw">设置新密码</string>
    <string name="hint_input_psw_secondly">再次输入密码</string>
    <string name="hint_input_mms_code">请输入短信验证码</string>
    <string name="hint_input_query_result_remark">请输入备注信息</string>
    <string name="hint_input_new_nickname">请输入新的昵称</string>
    <string name="hint_input_sender_remark">请输入备注信息</string>
    <string name="hint_input_sender_name">请输入托寄物的名称</string>
    <string name="dialog_title_query_result_add_remark">添加备注</string>
    <string name="dialog_title_nickname_modify">修改昵称</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="register_account">注册账号</string>
    <string name="modify_psw">修改密码</string>
    <string name="psw_modify">更改密码</string>
    <string name="summit">确定</string>
    <string name="refresh">刷新</string>
    <string name="auto_login">自动登录</string>
     <string name="auto_location">自动定位</string>
    <string name="login_immediately">立即登录</string>
    <string name="login_cancel">退出登录</string>
    <string name="select_from_history">从查询历史中选择</string>
    <string name="register_immediately">立即注册</string>
    <string name="register">注册</string>
    <string name="username">用户名:</string>
    <string name="psw">密&#160;&#160;&#160;&#160;码:</string>
    <string name="psw_repeat">验&#160;&#160;&#160;&#160;证:</string>
    <string name="captcha">验证码:</string>
    <string name="captcha_refresh">刷新</string>
    <string name="email2">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="agree">同意</string>
    <string name="register_agreement">&#060;&#060;注册协议&#062;&#062;</string>
    <string name="message_sent">寄件消息</string>
    <string name="message_recipient">收件消息</string>
    <string name="message_system">系统消息</string>
    <string name="message_suggest">投诉建议消息</string>
    <string name="address_info_sender">寄件人地址</string>
    <string name="address_info_recipient">收件人地址</string>
    <string name="flight_open">打开闪光灯</string>
    <string name="flight_close">关闭闪关灯</string>
    <string name="scan_toast">请将红外线对准快递、运单上的条形码</string>
    <string name="post_head_img">上传头像</string>
    <string name="code_scan">条码扫一扫</string>
    <string name="please_input_snum">请输入快递单号:</string>
    <string name="query_history">查询历史</string>
    <string name="btn_query">查询</string>
    <string name="btn_delete">删除</string>
    <string name="binded">已绑定  </string>
    <string name="mobile_number_old">旧手机号</string>
    <string name="mobile_number_new">新手机号</string>
    <string name="mms_verify">短信验证</string>
    <string name="code_get">获取验证码</string>
    <string name="modify">修改</string>
    <string name="count_psw_modify">修改账号密码</string>
    <string name="count_nickname_modify">修改昵称</string>
    <string name="psw_old">旧密码</string>
    <string name="psw_new">新密码</string>
    <string name="psw_summit">确认密码</string>
    <string name="about">关于</string>
    <string name="message_notice_setting">消息提醒设置</string>
    <string name="version_update">软件更新</string>
    <string name="setting_second_item0">免打扰设置</string>
    <string name="setting_second_item1">声音</string>
    <string name="setting_second_item2">震动</string>
    <string name="setting_third_item0">全天接收消息提醒</string>
    <string name="setting_third_item1">只在8:00-22:00之间接收消息提醒</string>
    <string name="setting_third_item2">不接受消息提醒</string>
    <string name="click_to_add_contact">点击添加联系人</string>
    <string name="sender_default_weight">1.0</string>
    <string name="sender_time_prompt">(2小时内，我们将安排取件)</string>
    <string name="share_title">快递助手</string>
    <string name="share_content">一款神奇的软件:http://www.weiwend.com</string>
    <string name="share_download_url">http://www.sto.cn/</string>
    <string name="head_img_set">设置头像</string>
    <string name="head_img_set_from_gallery">相册</string>
    <string name="head_img_set_from_capture">拍照</string>
    <string name="you_have_not_login">您尚未登录.</string>
    <string name="data_load_success">数据加载成功.</string>
    <string name="data_load_failed">数据加载失败.</string>
    <string name="tabview_title0">首页</string>
    <string name="tabview_title1">查件</string>
    <string name="tabview_title2">寄件</string>
    <string name="tabview_title3">消息</string>
    <string name="contact_name">联系人</string>
    <string name="phone">手  机</string>
    <string name="area">所在区域</string>
    <string name="address_details">详细地址</string>
    <string name="zcode">邮  编</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="please_input_tel_number">请首先填写手机号码.</string>
    <string name="delivery_number">单号: </string>
    <string name="suggestion_content">详情: </string>
    <string name="psw_modify_success">密码修改成功.</string>
    <string name="psw_modify_failed">密码修改失败.</string>
    <string name="address_modify_success">地址信息修改成功.</string>
    <string name="address_modify_failed">地址信息修改失败.</string>
    <string name="feedback_success">意见反馈成功.</string>
    <string name="feedback_failed">意见反馈失败.</string>
    <string name="query_history_get_success">查询历史记录获取成功.</string>
    <string name="query_history_get_failed">查询历史记录获取失败.</string>
    <string name="query_history_item_delete_success">查询记录删除成功.</string>
    <string name="query_history_item_delete_failed">查询记录删除失败.</string>
    <string name="delivery_query_success">单号信息查询成功.</string>
    <string name="delivery_query_failed">单号信息查询失败.</string>
    <string name="delivery_company_get_success">快递公司列表获取成功.</string>
    <string name="delivery_company_get_failed">快递公司列表获取失败.</string>
    <string name="address_get_success">地址信息获取成功.</string>
    <string name="address_get_failed">地址获取失败.</string>
    <string name="address_delete_success">地址信息删除成功.</string>
    <string name="address_delete_failed">地址信息删除失败.</string>
    <string name="send_add_success">订单信息提交成功.</string>
    <string name="send_add_failed">订单信息提交失败.</string>
    <string name="send_modify_success">订单信息修改成功.</string>
    <string name="send_modify_failed">订单信息修改失败.</string>
    <string name="send_history_get_success">发件历史记录获取成功.</string>
    <string name="send_history_get_failed">发件历史记录获取失败.</string>
    <string name="prompt_send_success">订单已提交成功,感谢您的支持!如需其他帮助,请联系客服中心.</string>
    <string name="prompt_send_success_phone">4008895543</string>
    <string name="prompt_send_success_phone_prefix">联系方式:</string>
    <string name="query_failed_prompt1">很抱歉,没有查到相关信息.</string>
    <string name="query_failed_prompt2">单号已经加入查件记录.</string>
    <string name="query_failed_prompt3">可能原因:</string>
    <string name="query_failed_prompt4">1.您的快递刚刚寄出,还没来得急录入.</string>
    <string name="query_failed_prompt5">2.你输入的快递公司名称或单号有误.</string>
    <string name="history_sender">历史寄件</string>
    <string name="continue_sender">继续下单</string>
</resources>