<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    
    <include layout="@layout/activity_title"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sender_success_container_margin_top"
        android:gravity="center"
        android:textSize="@dimen/textsize_big"
        android:text="@string/prompt_send_success"
        android:textColor="@color/orange_normal"/>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="@dimen/sender_success_container_margin_left"
	    android:layout_marginRight="@dimen/sender_success_container_margin_right"
	    android:layout_marginTop="@dimen/sender_success_container_margin_top2"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="@dimen/textsize_big"
	        android:text="@string/prompt_send_success_phone_prefix"
	        android:textColor="@color/orange_normal"/>
	    
	    <TextView
	        android:id="@+id/mPhoneTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="@dimen/textsize_big"
	        android:text="@string/prompt_send_success_phone"
	        android:textColor="@color/orange_normal"/>
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginLeft="@dimen/sender_success_container_margin_left"
	    android:layout_marginRight="@dimen/sender_success_container_margin_right"
	    android:layout_marginTop="@dimen/sender_success_container_margin_top3"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal">
	    <TextView
	        android:id="@+id/mContinueSendTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="@dimen/textsize_normal"
	        android:text="@string/continue_sender"
	        android:textColor="@drawable/text_color_black_white_selector"/>
	    
	    <TextView
	        android:id="@+id/mSendHistoryTv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/sender_success_continue_sender_margin_left"
	        android:gravity="center"
	        android:textSize="@dimen/textsize_normal"
	        android:text="@string/history_sender"
	        android:textColor="@drawable/text_color_black_white_selector"/>
    </LinearLayout>
</LinearLayout>