<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">
    
    <include layout="@layout/activity_title"/>
    
    <com.weiwend.fooldelivery.customviews.MyReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/psw_modify_item_margin_top"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:textSize="@dimen/psw_modify_textsize"
		            android:textColor="@color/text_black"
		            android:layout_marginRight="@dimen/psw_modify_text_margin_right"
		            android:text="@string/psw_old"
		            android:gravity="right"/>
		        <EditText
			        android:id="@+id/mOldPswEt" 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="@dimen/psw_modify_edittext_padding_left"
			        android:layout_weight="1"
			        android:hint="@string/hint_input_old_psw"
			        android:background="@null"
			        android:inputType="textPassword"
			        android:maxLength="@integer/edittext_max_length"/>
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/listview_divider_height"
		        android:background="@color/divider_line"/>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/psw_modify_item_margin_top"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:textSize="@dimen/psw_modify_textsize"
		            android:textColor="@color/text_black"
		            android:layout_marginRight="@dimen/psw_modify_text_margin_right"
		            android:text="@string/psw_new"
		            android:gravity="right"/>
		        <EditText
			        android:id="@+id/mNewPswEt" 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="@dimen/psw_modify_edittext_padding_left"
			        android:layout_weight="1"
			        android:hint="@string/hint_input_new_psw"
			        android:background="@null"
			        android:inputType="textPassword"
			        android:maxLength="@integer/edittext_max_length"/>
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/listview_divider_height"
		        android:background="@color/divider_line"/>
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/psw_modify_item_margin_top"
		        android:orientation="horizontal">
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:textSize="@dimen/psw_modify_textsize"
		            android:textColor="@color/text_black"
		            android:layout_marginRight="@dimen/psw_modify_text_margin_right"
		            android:text="@string/psw_summit"
		            android:gravity="right"/>
		        <EditText
			        android:id="@+id/mRepeatPswEt" 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="@dimen/psw_modify_edittext_padding_left"
			        android:layout_weight="1"
			        android:hint="@string/hint_input_new_psw_repeat"
			        android:background="@null"
			        android:inputType="textPassword"
			        android:maxLength="@integer/edittext_max_length"/>
		    </LinearLayout>
		    
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/listview_divider_height"
		        android:background="@color/divider_line"/>
		    
		    <Button
		        android:id="@+id/mSummitBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="@dimen/summit_btn_padding_top"
		        android:paddingBottom="@dimen/summit_btn_padding_bottom"
		        android:layout_marginLeft="@dimen/summit_btn_margin_left"
		        android:layout_marginRight="@dimen/summit_btn_margin_right"
		        android:layout_marginTop="@dimen/summit_btn_margin_top"
		        android:text="@string/psw_modify"
		        android:textColor="@drawable/btn_text_color_selector"
		        android:textSize="@dimen/summit_btn_textsize"
		        android:background="@drawable/bg_btn_selector"
		        android:enabled="false"/>
		</LinearLayout>
    </com.weiwend.fooldelivery.customviews.MyReboundScrollView>
</LinearLayout>	