<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    
    <include layout="@layout/activity_title"/>
    <com.weiwend.fooldelivery.customviews.MyReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:orientation="horizontal"
		        android:background="@drawable/frame_login"
		        android:gravity="center_vertical">
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/username"
				    android:textColor="@color/text_black"
				    android:textSize="@dimen/user_register_textsize_big"
				    android:visibility="gone"/>
		        <EditText
		            android:id="@+id/mUsernameEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:hint="@string/hint_register_username"
		            android:background="@null"
		            android:textSize="@dimen/user_register_textsize_normal"
		            android:maxLength="@integer/edittext_max_length"/>
		   </LinearLayout>
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:orientation="horizontal"
		        android:background="@drawable/frame_login"
		        android:gravity="center_vertical">
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/text_black"
				    android:textSize="@dimen/user_register_textsize_big"
				    android:visibility="gone"/>
		        <EditText
		            android:id="@+id/mNicknameEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:hint="@string/hint_register_nickname"
		            android:background="@null"
		            android:textSize="@dimen/user_register_textsize_normal"
		            android:maxLength="@integer/edittext_max_length"/>
		   </LinearLayout>
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:orientation="horizontal"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:background="@drawable/frame_login"
		        android:gravity="center_vertical">
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/psw"
				    android:textColor="@color/text_black"
				    android:textSize="@dimen/user_register_textsize_big"
				    android:visibility="gone"/>
		        <EditText
		            android:id="@+id/mPswEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/hint_register_psw"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:background="@null"
		            android:inputType="textPassword"
		            android:textSize="@dimen/user_register_textsize_normal"
		            android:maxLength="@integer/edittext_max_length"/>
		   </LinearLayout>
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:background="@drawable/frame_login"
		        android:gravity="center_vertical"
		        android:orientation="horizontal">
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/psw_repeat"
				    android:textColor="@color/text_black"
				    android:textSize="@dimen/user_register_textsize_big"
				    android:visibility="gone"/>
		        <EditText
		            android:id="@+id/mPswRepeatEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/hint_register_psw_repeat"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:background="@null"
		            android:inputType="textPassword"
		            android:textSize="@dimen/user_register_textsize_normal"
		            android:maxLength="@integer/edittext_max_length"/>
		   </LinearLayout>
		   <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone">
		        <Button
		            android:id="@+id/mRefreshCaptchaBtn"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/captcha_refresh"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"/>
			   <com.weiwend.invalid.MyCaptchaShowView
			        android:id="@+id/mCaptchaShowView"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_toLeftOf="@id/mRefreshCaptchaBtn"/>
		   </RelativeLayout>
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:background="@drawable/frame_login"
		        android:gravity="center_vertical"
		        android:orientation="horizontal">
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/psw_repeat"
				    android:textColor="@color/text_black"
				    android:textSize="@dimen/user_register_textsize_big"
				    android:visibility="gone"/>
		        <EditText
		            android:id="@+id/mMobileNumberEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/hint_register_mobile_number"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:inputType="number"
		            android:background="@null"
		            android:textSize="@dimen/user_register_textsize_normal"
		            android:maxLength="@integer/edittext_phone_max_length"/>
		   </LinearLayout>
		   <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/user_register_item_height"
		        android:layout_marginLeft="@dimen/user_register_item_margin_left"
		        android:layout_marginRight="@dimen/user_register_item_margin_right"
		        android:layout_marginTop="@dimen/user_register_item_margin_top"
		        android:background="@drawable/frame_login"
		        android:orientation="horizontal">
			    <Button
			        android:id="@+id/mGetCodeBtn" 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
			        android:background="@drawable/bg_btn_selector"
			        android:text="@string/code_get"
			        android:textSize="@dimen/user_register_textsize_normal"
			        android:textColor="@drawable/btn_text_color_selector"
			        android:paddingLeft="@dimen/user_register_btn_code_padding_left"
			        android:paddingRight="@dimen/user_register_btn_code_padding_right"
			        android:paddingTop="@dimen/user_register_btn_code_padding_top"
			        android:paddingBottom="@dimen/user_register_btn_code_padding_bottom"
			        android:layout_marginRight="@dimen/user_register_btn_code_margin_right"
			        android:layout_centerVertical="true"
			        android:enabled="true"/>
		        <EditText
		            android:id="@+id/mCaptchaEt" 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_toLeftOf="@id/mGetCodeBtn"
		            android:paddingLeft="@dimen/user_register_edittext_padding_left"
		            android:layout_marginRight="@dimen/user_register_edittext_code_margin_right"
		            android:hint="@string/hint_register_captcha"
		            android:background="@null"
		            android:layout_centerVertical="true"
		            android:maxLength="4"
		            android:textSize="@dimen/user_register_textsize_normal"/>
		   </RelativeLayout>
		   <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:gravity="center_horizontal">
		        <CheckBox
		            android:id="@+id/mAgreeCb" 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="bottom"/>
		        <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/agree"
				    android:textSize="@dimen/user_register_textsize_normal"
				    android:layout_gravity="bottom"/>
		        <TextView
		            android:id="@+id/mRegisterAgreementTv"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="@dimen/user_register_agreement_margin_left"
				    android:padding="@dimen/user_register_agreement_padding"
				    android:text="@string/register_agreement"
				    android:textColor="@color/blue_agreement"
				    android:textSize="@dimen/user_register_textsize_normal"
				    android:layout_gravity="bottom"/>
		   </LinearLayout>
		   <Button
		        android:id="@+id/mRegisterBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="@dimen/summit_btn_padding_top"
			    android:paddingBottom="@dimen/summit_btn_padding_bottom"
			    android:layout_marginLeft="@dimen/summit_btn_margin_left"
			    android:layout_marginRight="@dimen/summit_btn_margin_right"
			    android:layout_marginTop="@dimen/summit_btn_margin_top"   
		        android:text="@string/register_immediately"
		        android:textColor="@drawable/btn_text_color_selector"
		        android:textSize="@dimen/summit_btn_textsize"
		        android:background="@drawable/bg_btn_selector"
		        android:enabled="false"/>
	    </LinearLayout>
	</com.weiwend.fooldelivery.customviews.MyReboundScrollView>
</LinearLayout>	